k8s/advance/chat-api-base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: chat-api
  ports:
    - port: 5666
      targetPort: 5666
      protocol: TCP
      name: websocket

---
apiVersion: v1
kind: Service
metadata:
  name: green
spec:
  selector:
    app: chat-api
  ports:
    - port: 5666
      targetPort: 5666
      protocol: TCP
      name: websocket
