k8s/advance/chat-api-base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service
  namespace: realchat
  annotations:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.org/ssl-services: "hello-world-svc"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/upstream-hash-by: $remote_addr
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: chat-api-service
                port:
                  number: 5666
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: green
# spec:
#   ingressClassName: nginx
#   rules:
#     - http:
#         paths:
#           - path: /ws
#             pathType: Prefix
#             backend:
#               service:
#                 name: chat-api
#                 port:
#                   number: 5666
